# ndraw

./: README.md  gen_icon.py  pyproject.toml  pytest.ini  requirements.txt
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_ndraw_py.html
drw/: n.json  netw.json
src/: ndraw.py
tests/: test_draw_extended.py  test_ndraw.py
